--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,14 @@ a:visited{
 }
 .titulo{
     grid-area: titulo;
-    background-color: beige;
+    background-image:  linear-gradient(to right,antiquewhite, rgb(227, 154, 113), antiquewhite );
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .main{
+    background-image: linear-gradient(antiquewhite, rgb(227, 154, 113), antiquewhite);
     grid-area: main;
     display: grid;
     grid-template-columns: repeat(2,1fr);
@@ -32,21 +33,18 @@ a:visited{
 
 .main-titulo{
     grid-area: titulo;
-    background-color: beige;
     display: flex;
     justify-content: center;
     align-items: center;   
 }
 .main-info{
     grid-area: info;
-    background-color: beige;
     display: flex;
     justify-content: center;
     align-items: center;   
 }
 .main-img{
     grid-area: imagen;
-    background-color: white;
     display: flex;
     align-items: center;
     align-content: center;
@@ -142,7 +140,7 @@ a:visited{
 /*HEADER*/
 
 .header{
-    background-color: antiquewhite;
+    background-image: linear-gradient(to top, antiquewhite, rgb(227, 154, 113));
     position: sticky;
 }
 .nav-menu{
@@ -169,6 +167,8 @@ a:visited{
         margin: 1rem 2rem;
         font-weight: bolder;
         padding-right: 10rem;
+        font-size: 20px;
+        text-align: center;
 }
 /*HEADER*/
 /* TITULO */
@@ -179,7 +179,7 @@ a:visited{
 
 /* FOOTER */
 .footer{
-    background-color: antiquewhite;
+    background-image: linear-gradient(to bottom, antiquewhite, rgb(227, 154, 113));
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -197,6 +197,14 @@ a:visited{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 40px;
+}
+
+.sabores p{
+   padding: 20px 20px;
+}
+.sabores img{
+    padding-bottom: 20px;
 }
 /* SABORES */
 
@@ -239,7 +247,6 @@ a:visited{
 }
 .contactbutton{
     margin-top: 1.5rem;
-    background-color:antiquewhite;
     display: inline-block;
     padding: 0.5rem 1.5rem;
     border-radius: 20px;
@@ -273,3 +280,35 @@ a:visited{
 
 /* PRODUCTOS */
 /* SECCIONES */
+
+/* ANIMACIONES */
+
+.contacttf{
+    background-color: antiquewhite;
+}
+.contacttf:focus{
+    background-color:  rgb(227, 154, 113);
+}
+
+.buttontf{
+    background-color: antiquewhite;
+}
+.buttontf:hover{
+    background-color:  rgb(227, 154, 113);
+}
+
+.animacionaparecer{
+    animation-duration: 2s;
+    animation-name: aparecer;
+}
+
+@keyframes aparecer{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+
+/* ANIMACIONES */
